feat: add ability to update user profile
