# src/routes/users.js
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import { UserController } from '../controllers/user.js';
 import { CommonValidationMiddleware } from '../middlewares/validation/common.js';
 import { AuthMiddleware } from '../middlewares/auth.js';
+import { UserValidationMiddleware } from '../middlewares/validation/user.js';
 
 /** @param {Router} appRouter */
 export default (appRouter) => {
@@ -17,5 +18,12 @@ export default (appRouter) => {
     '/:id',
     CommonValidationMiddleware.isValidParamsIdUuid,
     UserController.getUser
+  );
+
+  router.put(
+    '/me/profile',
+    AuthMiddleware.isAuthorized,
+    UserValidationMiddleware.isValidUserProfilePayload,
+    UserController.updateCurrentUserProfile
   );
 };
